--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -5,19 +5,6 @@
 \label{sec:skroty}
 \noindent\vspace{-\topsep-\partopsep-\parsep} % Jeśli zaczyna się od otoczenia description, to otoczenie to ląduje lekko niżej niż wylądowałby zwykły tekst, dlatego wstawiano przesunięcie w pionie
 \begin{description}[labelwidth=*]
-  \item [OGC] (ang.\ \emph{Open Geospatial Consortium}) %-- jednostka arytmetyczno--logiczna
-  \item [XML] (ang.\ \emph{eXtensible Markup Language})
-  \item [SOAP] (ang.\ \emph{Simple Object Access Protocol})
-  \item [WSDL] (ang.\ \emph{Web Services Description Language})
-  \item [UDDI] (ang.\ \emph{Universal Description Discovery and Integration})
-  \item [GIS] (ang.\ \emph{Geographical Information System})
-  \item [SDI] (ang.\ \emph{Spatial Data Infrastructure})
-  \item [ISO] (ang.\ \emph{International Standards Organization})
-  \item [WMS] (ang.\ \emph{Web Map Service})
-  \item [WFS] (ang.\ \emph{Web Feature Service})
-  \item [WPS] (ang.\ \emph{Web Processing Service})
-  \item [GML] (ang.\ \emph{Geography Markup Language})
-  \item [SRG] (ang.\ \emph{Seeded Region Growing})
-  \item [SOA] (ang.\ \emph{Service Oriented Architecture })
-  \item [IT] (ang.\ \emph{Information Technology })
+  \item [eBOK] (pl.\ \emph{Elektroniczne Biuro Obsługi Klienta})
+  \item [eCSO] (ang.\ \emph{Electronic Customer Service Office})
 \end{description}
