--- a/Dyplom/streszczenie.tex
+++ b/Dyplom/streszczenie.tex
@@ -12,7 +12,7 @@
 %%%Nam id nulla a adipiscing tortor, dictum ut, lobortis urna. Donec non dui. Cras tempus orci ipsum, molestie quis, lacinia varius nunc, rhoncus purus, consectetuer congue risus. 
 %\mbox{}\vspace{2cm} % można przesunąć, w zależności od długości streszczenia
 \begin{abstract}
-Praca inżynierska dotyczy projektu aplikacji wspierającej działanie Elektronicznego Biura Obsługi Klienta (eBOK) dla spółdzielni mieszkaniowych. Celem pracy jest opracowanie systemu, który umożliwia automatyzację komunikacji między spółdzielnią a mieszkańcami, zapewniając jednocześnie bezpieczeństwo danych i elastyczność w dostępie do informacji. Projektowana aplikacja pozwala na przeglądanie umów, rozliczeń, zgłoszeń oraz komunikatów, a także na wykonywanie płatności online, wszystko w intuicyjnym i przyjaznym dla użytkownika środowisku.
+Praca inżynierska dotyczy projektu aplikacji wspierającej działanie eBOK dla spółdzielni mieszkaniowych. Celem pracy jest opracowanie systemu, który umożliwia automatyzację komunikacji między spółdzielnią a mieszkańcami, zapewniając jednocześnie bezpieczeństwo danych i elastyczność w dostępie do informacji. Projektowana aplikacja pozwala na przeglądanie umów, rozliczeń, zgłoszeń oraz komunikatów, a także na wykonywanie płatności online, wszystko w intuicyjnym i przyjaznym dla użytkownika środowisku.
 
 W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK, opisano założenia projektowe oraz wdrożenie aplikacji z wykorzystaniem frameworka Spring. Zawarto także opis zastosowanego stosu technologicznego, który obejmuje m.in. Spring Boot, Hibernate, React oraz bazę danych PostgreSQL. Wynikiem pracy jest funkcjonalna aplikacja, która może zostać wdrożona w rzeczywistym środowisku, usprawniając codzienną obsługę mieszkańców i poprawiając efektywność działania spółdzielni.
 \end{abstract}
@@ -21,7 +21,7 @@ W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK, o
 {
 \selectlanguage{english}
 \begin{abstract}
-The engineering thesis focuses on the development of an application supporting the Electronic Customer Service Office (eCSO) for housing cooperatives. The aim of the project is to create a system that automates communication between the cooperative and its residents, ensuring data security and flexibility in accessing information. The designed application allows users to view contracts, invoices, reports, and announcements, as well as make online payments, all within an intuitive and user-friendly environment.
+The engineering thesis focuses on the development of an application supporting the eCSO for housing cooperatives. The aim of the project is to create a system that automates communication between the cooperative and its residents, ensuring data security and flexibility in accessing information. The designed application allows users to view contracts, invoices, reports, and announcements, as well as make online payments, all within an intuitive and user-friendly environment.
 
 The thesis includes a detailed analysis of eBOK system functionalities, design assumptions, and the application implementation using the Spring framework. The project leverages technologies such as Spring Boot, Hibernate, React and a PostgreSQL database. The outcome of this work is a functional application that can be implemented in a real environment, improving the daily customer service for residents and enhancing the efficiency of the housing cooperative's operations.
 \end{abstract}
