fisrt remarks and corrections

--- a/Dyplom/Dyplom.tex
+++ b/Dyplom/Dyplom.tex
@@ -364,14 +364,14 @@ captionpos=t
 %%  Pakiety i komendy zastosowane tylko do zamieszczenia informacji o użytych komendach i fontach w tym szablonie.
 %%  Normalnie nie są one potrzebne. Proszę poniższe deklaracje zamarkować podczas redakcji pracy !!!!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{memlays}     % extra layout diagrams, zastosowane w szblonie do 'debuggowania', używa pakietu layouts
+%%\usepackage{memlays}     % extra layout diagrams, zastosowane w szblonie do 'debuggowania', używa pakietu layouts
 %\usepackage{layouts}
-\usepackage{printlen} % pakiet do wyświetlania wartości zdefiniowanych długości, stosowany do 'debuggowania'
-\usepackage{enumitem} % pakiet do numerowania 1.1 1.2 w sekcji enumrate
-\uselengthunit{pt}
-\makeatletter
-\newcommand{\showFontSize}{\f@size pt} % makro wypisujące wielkość bieżącej czcionki
-\makeatother
+%%\usepackage{printlen} % pakiet do wyświetlania wartości zdefiniowanych długości, stosowany do 'debuggowania'
+%%\usepackage{enumitem} % pakiet do numerowania 1.1 1.2 w sekcji enumrate
+%%\uselengthunit{pt}
+%%\makeatletter
+%%\newcommand{\showFontSize}{\f@size pt} % makro wypisujące wielkość bieżącej czcionki
+%%\makeatother
 % do pokazania ramek można byłoby użyć:
 %\usepackage{showframe} 
 
@@ -845,7 +845,7 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 \wydzial{Wydział Informatyki i Telekomunikacji} % INFO: nazwa wydziału
 \kierunek{Informatyka techniczna (ITE)} % IFO: nazwa kierunku
 \specjalnosc{Inżynieria systemów informatycznych (INS)} % INFO: nazwa specjalności
-\promotor{Dr. inż. Tomasz Kubik} % INFO: dane promotora 
+\promotor{dr inż.\ Tomasz Kubik} % INFO: dane promotora 
 \kvpl{raz, dwa, trzy} % INFO: słowa kluczowe po polsku
 \kven{one, two, three} % INFO: słowa kluczowe po angielsku
 \date{WROCŁAW, 2024} % INFO: miejscowość, rok złożenia pracy dyplomowej
@@ -882,18 +882,18 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 % INFO: Strona z licencją CC zdefiniowana poniżej dotyczy tylko zredagowanej treści. 
 %       Z samego szablon można korzystywać bez konieczności cytowania jego autora.
 %       Podczas pisania pracy dyplomowej stronę tę można usunąć (a nawet należy).
-\thispagestyle{empty}
-\mbox{}\vfill
-\noindent\begin{tabular}{@{}ll} Opracował: & Daniel Ryszkowski \\
- %Data: & styczeń 2023 
- \end{tabular}\\[15mm]
-\noindent\includegraphics[width=3cm]{by-nc-sa}\newline
-{\normalfont 
-Tekst zawarty w niniejszym szablonie jest udostępniany na licencji Creative Commons: \emph{Uznanie autorstwa -- Użycie niekomercyjne -- Na tych samych warunkach, 3.0 Polska}, Wrocław 2023. \\[2pt]
-Oznacza to, że wszystkie przekazane treści można kopiować i  wykorzystywać do celów niekomercyjnych, a także tworzyć na ich podstawie utwory zależne pod warunkiem podania autora i~nazwy licencjodawcy oraz udzielania na utwory zależne takiej samej licencji. Tekst licencji jest dostępny pod adresem: \url{http://creativecommons.org/licenses/by-nc-sa/3.0/pl/}.\\[2pt]
-Licencja nie dotyczy latexowego kodu szablonu. Sam szablon (tj.\ zbiór przygotowanych komend formatujących dokument) można wykorzystywać bez wzmiankowania o jego autorze. Dlatego podczas redakcji pracy dyplomowej niniejszą stronę można usunąć. 
-}
-\clearpage
+%%%\thispagestyle{empty}
+%%%\mbox{}\vfill
+%%%\noindent\begin{tabular}{@{}ll} Opracował: & Daniel Ryszkowski \\
+ %%%%Data: & styczeń 2023 
+ %%%\end{tabular}\\[15mm]
+%%%\noindent\includegraphics[width=3cm]{by-nc-sa}\newline
+%%%{\normalfont 
+%%%Tekst zawarty w niniejszym szablonie jest udostępniany na licencji Creative Commons: \emph{Uznanie autorstwa -- Użycie niekomercyjne -- Na tych samych warunkach, 3.0 Polska}, Wrocław 2023. \\[2pt]
+%%%Oznacza to, że wszystkie przekazane treści można kopiować i  wykorzystywać do celów niekomercyjnych, a także tworzyć na ich podstawie utwory zależne pod warunkiem podania autora i~nazwy licencjodawcy oraz udzielania na utwory zależne takiej samej licencji. Tekst licencji jest dostępny pod adresem: \url{http://creativecommons.org/licenses/by-nc-sa/3.0/pl/}.\\[2pt]
+%%%Licencja nie dotyczy latexowego kodu szablonu. Sam szablon (tj.\ zbiór przygotowanych komend formatujących dokument) można wykorzystywać bez wzmiankowania o jego autorze. Dlatego podczas redakcji pracy dyplomowej niniejszą stronę można usunąć. 
+%%%}
+%%%\clearpage
 
 % Kolejne części dokumentu: streszczenie, spisy, skróty, rozdziały, dodatki
 %\chapterstyle{noNumbered}
@@ -930,6 +930,8 @@ Licencja nie dotyczy latexowego kodu szablonu. Sam szablon (tj.\ zbiór przygoto
 % ROZDZIAŁY (kolejne rozdziały dołączane są z kolejnych plików)
 \chapterstyle{default}
 \include{rozdzial01}
+\include{rozdzial02}
+\include{rozdzial03}
 % LITERATURA (zostanie wygenerowana automatycznie)
 %UWAGA: bibliotekę referencji należy przygotować samemu. Dobrym do tego narzędziem jest JabRef.
 %       JabRef oferuje jednak większą liczbę typów rekordów niż obsługuje BibTeX.
